syntax = "proto3";

package zen.remote;

import "common.proto";

service PeerService
{
  rpc Probe(PeerProbeRequest) returns (EmptyResponse);
}

message PeerProbeRequest {}
